Changes with melon 1.3.1                                          20 Oct 2015
    *) Fixed a bug of event component.
    *) Added a configuration command for log path.

Changes with melon 1.3.0                                          17 Sep 2015
    *) Added a log level (Warn).
    *) Added two configuration command (max_nofile and
       core_file_size).
    *) Added an new interface in mln_hash.c for changing value
       (mln_hash_change_value()).
    *) Added HTTP components.

Changes with melon 1.2.8                                          14 Sep 2015
    *) Added a memory pool.
    *) Added a change structure.
    *) Added a buffer structure.
    *) Added another implementation of tcp I/O.
    *) Added some interfaces of string.
    *) Added an implementation of file cache.

Changes with melon 1.2.7                                          29 Jul 2015
    *) Fixed some bugs about lock.

Changes with melon 1.2.6                                          27 Jul 2015
    *) Fixed some bugs of salloc.

Changes with melon 1.2.5                                          20 Jul 2015
    *) Optimized the initialization of boot parameters.

    *) Optimized the initialization of log and daemon.

    *) Fixed Makefile not to overwrite configuration file.

    *) Deleted the shell script code which created user 'melon'.

    *) Added configuration item for changing user.

Changes with melon 1.2.4                                          03 Jul 2015
    *) Modified shell script 'configure'.

    *) Modified the input arguments of KMP algorithm.

    *) Modified the prototype of function 'mln_conf_set_hook'.

    *) Added an interface 'mln_conf_unset_hook' to unset a
       callback handler which is indicated by the argument.

Changes with melon 1.2.3                                          10 May 2015

    *) Modified configuration's data structures.

    *) Added an interface for reloading configurations.
