@@ -1,6 +1,16 @@
+Changes with melon 1.3.2                                          22 Oct 2015
+    *) Added one interface for the communication
+       between master process and worker process.
+    *) Added some interfaces for getting socket
+       file descriptor of tcp connection.
+    *) Added some interfaces for testing whether the
+       chains are empty.
+    *) Added a boot parameter for stop melon service.
+
 Changes with melon 1.3.1                                          20 Oct 2015
     *) Fixed a bug of event component.
     *) Added a configuration command for log path.
+    *) Added a boot parameter for reload configuration.
 
 Changes with melon 1.3.0                                          17 Sep 2015
     *) Added a log level (Warn).
